Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34993

QML Camera Example doesn't capture images on Nexus 7 (Android 4.3)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.2.1
    • 5.2.0 Beta1
    • Multimedia, Quick: Other
    • None
    • Android
    • ecce937a054e4a96597cb13c40d216bddbd45891

    Description

      Pressing the capture button results in a pause/sound as if a picture was taken, but the onImageCaptured callback of the Camera element's imageCapture is evidently not executed (i.e., no change in the UI).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ylopes Yoann Lopes
            urthas Nathanael Kuipers
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes